--- a/manifests/04-ollama-route.yaml
+++ b/manifests/04-ollama-route.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ollama-route
   namespace: ollama
 spec:
-  host: ollama.apps.fennec.shift.zone
+  host: ollama.apps.openshift1.avivgts.com
   port:
     targetPort: 11434
   to:
