changes for my local environment

--- a/manifests/01-ollama-pvc.yaml
+++ b/manifests/01-ollama-pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ollama-storage
-  namespace: ollama
+  namespace: codegen-poc
 spec:
   accessModes:
     - ReadWriteOnce
